--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -196,7 +196,7 @@
           <string> 新建客户</string>
          </property>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
            <x>200</x>
@@ -407,7 +407,7 @@
           <string> 新建供应商</string>
          </property>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
            <x>200</x>
@@ -482,274 +482,6 @@
          <string/>
         </property>
        </widget>
-       <widget class="QLabel" name="pronum_label">
-        <property name="geometry">
-         <rect>
-          <x>31</x>
-          <y>31</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string> 货品编码：</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="pronum_lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>103</x>
-          <y>31</y>
-          <width>130</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="proname_lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>311</x>
-          <y>31</y>
-          <width>130</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="proname_label">
-        <property name="geometry">
-         <rect>
-          <x>239</x>
-          <y>31</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string> 货品名称：</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="prospec_lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>519</x>
-          <y>31</y>
-          <width>130</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="prospec_label">
-        <property name="geometry">
-         <rect>
-          <x>447</x>
-          <y>31</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string> 货品规格：</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="probarcode_label">
-        <property name="geometry">
-         <rect>
-          <x>655</x>
-          <y>31</y>
-          <width>54</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string> 条  码：</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="probarcode_lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>715</x>
-          <y>31</y>
-          <width>130</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="probatno_label">
-        <property name="geometry">
-         <rect>
-          <x>31</x>
-          <y>80</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>批     号：</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="probatno_lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>103</x>
-          <y>80</y>
-          <width>130</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="prounit_label">
-        <property name="geometry">
-         <rect>
-          <x>239</x>
-          <y>80</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>单    位：</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="prouint_lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>311</x>
-          <y>80</y>
-          <width>130</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="procount_label">
-        <property name="geometry">
-         <rect>
-          <x>447</x>
-          <y>80</y>
-          <width>66</width>
-          <height>12</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>数     量：</string>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="procount_spinBox">
-        <property name="geometry">
-         <rect>
-          <x>519</x>
-          <y>80</y>
-          <width>130</width>
-          <height>22</height>
-         </rect>
-        </property>
-        <property name="maximum">
-         <number>999</number>
-        </property>
-       </widget>
-       <widget class="QLabel" name="proprice_label">
-        <property name="geometry">
-         <rect>
-          <x>655</x>
-          <y>80</y>
-          <width>54</width>
-          <height>12</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>单  价：</string>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="proprice_spinBox">
-        <property name="geometry">
-         <rect>
-          <x>715</x>
-          <y>80</y>
-          <width>130</width>
-          <height>22</height>
-         </rect>
-        </property>
-        <property name="maximum">
-         <number>9999</number>
-        </property>
-       </widget>
-       <widget class="QLabel" name="prototalprice_label">
-        <property name="geometry">
-         <rect>
-          <x>31</x>
-          <y>120</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>金     额：</string>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="prostack_spinBox">
-        <property name="geometry">
-         <rect>
-          <x>311</x>
-          <y>120</y>
-          <width>130</width>
-          <height>22</height>
-         </rect>
-        </property>
-        <property name="maximum">
-         <number>10000</number>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="prototalprice_spinBox">
-        <property name="geometry">
-         <rect>
-          <x>103</x>
-          <y>120</y>
-          <width>130</width>
-          <height>22</height>
-         </rect>
-        </property>
-        <property name="maximum">
-         <number>99999</number>
-        </property>
-       </widget>
-       <widget class="QLabel" name="prostack_label">
-        <property name="geometry">
-         <rect>
-          <x>239</x>
-          <y>120</y>
-          <width>66</width>
-          <height>12</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>库存数量：</string>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="prolack_spinBox">
-        <property name="geometry">
-         <rect>
-          <x>519</x>
-          <y>120</y>
-          <width>130</width>
-          <height>22</height>
-         </rect>
-        </property>
-        <property name="maximum">
-         <number>1000</number>
-        </property>
-       </widget>
-       <widget class="QLabel" name="prolack_label">
-        <property name="geometry">
-         <rect>
-          <x>447</x>
-          <y>120</y>
-          <width>66</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>缺少数量：</string>
-        </property>
-       </widget>
        <widget class="QGroupBox" name="groupBox_5">
         <property name="geometry">
          <rect>
@@ -762,7 +494,7 @@
         <property name="title">
          <string>货品管理</string>
         </property>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
            <x>250</x>
@@ -801,6 +533,297 @@
            </widget>
           </item>
          </layout>
+        </widget>
+        <widget class="QLabel" name="prostack_label">
+         <property name="geometry">
+          <rect>
+           <x>430</x>
+           <y>110</y>
+           <width>66</width>
+           <height>12</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>库存数量：</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="prototalprice_label">
+         <property name="geometry">
+          <rect>
+           <x>222</x>
+           <y>110</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>金     额：</string>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="prototalprice_spinBox">
+         <property name="geometry">
+          <rect>
+           <x>294</x>
+           <y>110</y>
+           <width>130</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="maximum">
+          <number>99999</number>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="prostack_spinBox">
+         <property name="geometry">
+          <rect>
+           <x>502</x>
+           <y>110</y>
+           <width>130</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="maximum">
+          <number>10000</number>
+         </property>
+        </widget>
+        <widget class="QLabel" name="prolack_label">
+         <property name="geometry">
+          <rect>
+           <x>638</x>
+           <y>110</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>缺少数量：</string>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="prolack_spinBox">
+         <property name="geometry">
+          <rect>
+           <x>710</x>
+           <y>110</y>
+           <width>130</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="maximum">
+          <number>1000</number>
+         </property>
+        </widget>
+        <widget class="QLabel" name="proprice_label">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>110</y>
+           <width>54</width>
+           <height>12</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>单  价：</string>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="proprice_spinBox">
+         <property name="geometry">
+          <rect>
+           <x>80</x>
+           <y>110</y>
+           <width>130</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="maximum">
+          <number>9999</number>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="procount_spinBox">
+         <property name="geometry">
+          <rect>
+           <x>710</x>
+           <y>70</y>
+           <width>130</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="maximum">
+          <number>999</number>
+         </property>
+        </widget>
+        <widget class="QLabel" name="probatno_label">
+         <property name="geometry">
+          <rect>
+           <x>222</x>
+           <y>70</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>批     号：</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="prounit_label">
+         <property name="geometry">
+          <rect>
+           <x>430</x>
+           <y>70</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>单    位：</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="prouint_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>502</x>
+           <y>70</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="procount_label">
+         <property name="geometry">
+          <rect>
+           <x>638</x>
+           <y>70</y>
+           <width>66</width>
+           <height>12</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>数     量：</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="probatno_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>294</x>
+           <y>70</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="probarcode_label">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>70</y>
+           <width>54</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string> 条  码：</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="probarcode_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>70</x>
+           <y>70</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="prospec_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>710</x>
+           <y>20</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="proname_label">
+         <property name="geometry">
+          <rect>
+           <x>420</x>
+           <y>20</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string> 货品名称：</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="prospec_label">
+         <property name="geometry">
+          <rect>
+           <x>628</x>
+           <y>20</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string> 货品规格：</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="proname_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>492</x>
+           <y>20</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="pronum_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>80</x>
+           <y>20</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="pronum_label">
+         <property name="geometry">
+          <rect>
+           <x>8</x>
+           <y>20</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string> 货品编码：</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="procategory_lineEdit">
+         <property name="geometry">
+          <rect>
+           <x>292</x>
+           <y>20</y>
+           <width>130</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="procategory_label">
+         <property name="geometry">
+          <rect>
+           <x>220</x>
+           <y>20</y>
+           <width>66</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string> 货品大类：</string>
+         </property>
         </widget>
        </widget>
        <widget class="QGroupBox" name="groupBox_6">
@@ -841,28 +864,6 @@
        </widget>
        <zorder>groupBox_5</zorder>
        <zorder>label</zorder>
-       <zorder>pronum_label</zorder>
-       <zorder>pronum_lineEdit</zorder>
-       <zorder>proname_lineEdit</zorder>
-       <zorder>proname_label</zorder>
-       <zorder>prospec_lineEdit</zorder>
-       <zorder>prospec_label</zorder>
-       <zorder>probarcode_label</zorder>
-       <zorder>probarcode_lineEdit</zorder>
-       <zorder>probatno_label</zorder>
-       <zorder>probatno_lineEdit</zorder>
-       <zorder>prounit_label</zorder>
-       <zorder>prouint_lineEdit</zorder>
-       <zorder>procount_label</zorder>
-       <zorder>procount_spinBox</zorder>
-       <zorder>proprice_label</zorder>
-       <zorder>proprice_spinBox</zorder>
-       <zorder>prototalprice_label</zorder>
-       <zorder>prostack_spinBox</zorder>
-       <zorder>prototalprice_spinBox</zorder>
-       <zorder>prostack_label</zorder>
-       <zorder>prolack_spinBox</zorder>
-       <zorder>prolack_label</zorder>
        <zorder>groupBox_6</zorder>
       </widget>
       <widget class="QWidget" name="tabSell">
